--- a/movie_booking/src/Booking/chair.css
+++ b/movie_booking/src/Booking/chair.css
@@ -46,7 +46,7 @@
     height: 100;
     width:80%;
     filter: drop-shadow(4px 30px 20px rgba(255, 255, 255, 0.5));
-    font-size: 25px;
+    /* font-size: 25px; */
     color: #fff;
 }
 
@@ -60,4 +60,10 @@
     font-size: 30px;
     color: yellow;
 
+}
+
+.container{
+    background-image: url(../assets/bgmovie.jpg);
+    width: 1280px;
+    height: fit-content;
 }
